@@ -165,6 +165,12 @@
                 %tr
                   %td.shortcut
                     .key g
+                    .key l
+                  %td
+                    Go to issue boards
+                %tr
+                  %td.shortcut
+                    .key g
                     .key m
                   %td
                     Go to merge requests
